# Medical-AgenticRag-Assistant

./: .env.example  Dockerfile  docker-compose.yml  generate_mermaid.py  pyproject.toml  start_dev.sh  stop.sh  visualize_graph.py
app/: __init__.py
app/agents/: graph.py  llm.py
app/agents/nodes/: chat.py  db_tools.py  judge.py  nedrex_tools.py  router.py  synthesizer.py  tools.py  translator.py
app/agents/state/: __init__.py  state.py
app/chainlit/: __init__.py  chainlit_app.py
app/core/: config.py  tracing.py
app/tools/: agent_tools.py  nedrexapi.py  retriever.py
data/: MED.csv
data_collection/: main.py
data_collection/database/: models.py
data_collection/utils/: medicaments.py  scraper.py
presentation/cloud/reveal.js/: gulpfile.js  index.html
visualizations/: graph_workflow.md
